Created Home and Product pages

--- a/rossie-handmade-frontend/src/index.css
+++ b/rossie-handmade-frontend/src/index.css
@@ -9,6 +9,10 @@ body{
   margin: 0;
 }
 
+#root{
+  height: 100%;
+}
+
 .grid-container{
   display: grid;
   grid-template-areas: "header" "main" "footer";
@@ -146,4 +150,63 @@ a:hover{
   position: absolute;
   right: .5rem;
   top: 1.5rem;
+}
+
+/* product details */
+.details{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 1rem;
+}
+
+.details-image{
+  flex: 2 1 60rem;
+}
+
+.details-image img{
+  widows: 100%;
+  max-width: 60rem;
+}
+
+.details-info{
+  flex: 1 1 30rem;
+}
+
+.details-action{
+  flex: 1 1 30rem;
+  border: .1rem silver solid;
+  border-radius: 0.5rem;
+  background-color: white;
+  padding: 1rem;
+}
+
+.details-info ul, .details-action ul{
+  list-style-type: none;
+  padding: 0;
+}
+
+.details-info li, .details-action li{
+  margin-bottom: 1rem;
+}
+
+.back-to-results{
+  padding: 1rem;
+}
+
+.details-action ul li:last-child{
+  display: flex;
+  flex-direction: column;
+}
+
+.button{
+  padding: 1rem;
+  border: .1rem silver solid;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.button:hover{
+  border: .1rem plum solid;
 }
