--- a/rossie-handmade-frontend/src/index.css
+++ b/rossie-handmade-frontend/src/index.css
@@ -1,282 +1,319 @@
-html{
-  font-size: 62.5%; /* 16px * 62.5 = 10px = 1rem */
+html {
+  font-size: 60%; /* 16px * 62.5 = 10px = 1rem */
   box-sizing: border-box;
 }
-
-body{
-  font: 1.6rem Helvetica;
+body {
+  font: 1.6rem ;
   height: 100vh;
   margin: 0;
 }
-
-button{
+button {
   font-size: 1.6rem;
 }
-
-.full-width{
+.full-width {
   width: 100%;
 }
-
-#root{
+#root {
   height: 100%;
 }
-
-.grid-container{
+.grid-container {
   display: grid;
-  grid-template-areas: "header" "main" "footer";
+  grid-template-areas:
+    'header'
+    'main'
+    'footer';
   grid-template-columns: 1fr;
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
 }
-
-.header{
+.header {
   grid-area: header;
-  background-color: plum;
+  background-color: ghostwhite;
   color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem;
+  padding: 5rem;
+  font-size: 20px;
+  
 }
-
-.brand a{
+.brand a {
   color: black;
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: bold;
   text-decoration: none;
 }
-
-.header-links a{
+.header-links a {
   color: black;
   text-decoration: none;
+  padding: 1rem;
 }
-
-.header-links a:hover{
+.header-links a:hover {
   color: purple;
 }
-
-.main{
+.main {
   grid-area: main;
 }
-
-.footer{
+.footer {
   grid-area: footer;
-  background-color: plum;
+  background-color: ghostwhite;
   color: black;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 20px;
 }
-
-a{
+a {
   text-decoration: none;
 }
-
-a:hover{
+a:hover {
   color: purple;
 }
-
-/* home screen */
-.products{
-  display:flex;
+/* Home Screen */
+.products {
+  display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: wrap;  
+  padding: 100px;
 }
-
-.products li{
+.products li {
   list-style-type: none;
   padding: 0;
   flex: 0 1 34rem;
   margin: 1rem;
   height: 50rem;
-  border-bottom: .1rem violet solid;
+  border-bottom: 0.1rem #c0c0c0 solid;
 }
-
-.product{
+.product {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
 }
-
-.product-name{
-  font-size: 2rem;
+.product-name {
+  font-size: 2.5rem;
   font-weight: bold;
 }
-
-.product-brand{
-  font-size: 1.2rem;
-  color:black;
+.product-brand {
+  font-size: 1.8rem;
+  color: #808080;
 }
-
-.product-price{
-  font-size: 2rem;
+.product-price {
+  font-size: 2.5rem;
   font-weight: bold;
 }
-
-.product-image{
+.product-image {
   max-width: 34rem;
   max-height: 34rem;
 }
-
-.product-rating{
+.product-rating {  
+  font-size: 1.8rem;
   margin-bottom: 1rem;
 }
+/* Reviews */
+ul.review {
+  list-style-type: none;
+  padding: 0;
+}
+.review li {
+  margin: 1rem;
+  margin-bottom: 2rem;
+}
+.review li > div {
+  margin: 0.5rem;
+}
 
-.brand button{
+/* Rating */
+.rating span {
+  color: black;
+  font-size: 1.8rem;
+  margin: 0.1rem;
+}
+.rating span:last-child {
+  color: #444444;
+  font-size: 1.4rem;
+}
+a > .rating > span:last-child {
+  color: #0000ff;
+}
+
+/* Sidebar */
+
+.brand button {
   font-size: 3rem;
-  padding: .5rem;
+  padding: 0.5rem;
   background: none;
   border: none;
   color: black;
   cursor: pointer;
 }
-
-.sidebar{
+.sidebar {
   position: fixed;
-  transition: all .8sec;
+  transition: all 0.5s;
   transform: translateX(-30rem);
   width: 30rem;
-  background-color: silver;
+  background-color: #f0f0f0;
   height: 100%;
 }
-
-.sidebar.open{
+.sidebar.open {
   transform: translateX(0);
 }
 
-.sidebar-close-button{
+.sidebar-close-button {
   border-radius: 50%;
-  border: .1rem black solid;
+  border: 0.1rem #000000 solid;
   width: 3rem;
   height: 3rem;
-  padding: .5rem;
+  padding: 0.5rem;
   font-size: 2rem;
   padding-top: 0;
   cursor: pointer;
   position: absolute;
-  right: .5rem;
+  right: 0.5rem;
   top: 1.5rem;
 }
 
-/* product details */
-.details{
+/* Product Details */
+.details {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
-  padding: 1rem;
+  padding: 10rem;
 }
-
-.details-image{
+.details-image {
   flex: 2 1 60rem;
 }
-
-.details-image img{
-  widows: 100%;
+.details-image img {
   max-width: 60rem;
+  width: 100%;
 }
-
-.details-info{
+.details-info {
+  flex: 1 1 30rem;
+}
+.details-action {
   flex: 1 1 30rem;
 }
 
-.details-action{
-  flex: 1 1 30rem;
-  border: .1rem silver solid;
-  border-radius: 0.5rem;
-  background-color: white;
-  padding: 1rem;
-}
-
-.details-info ul, .details-action ul{
+.details-info ul,
+.details-action ul {
   list-style-type: none;
   padding: 0;
 }
-
-.details-info li, .details-action li{
-  margin-bottom: 1rem;
+.details-info li,
+.details-action li {
+  margin-bottom: 2rem;  
+  font-size: 2rem;
 }
-
-.back-to-results{
+.back-to-results {
+  padding-top: 7rem;
+  font-size: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+.details-action {
+  border: 0.1rem #808080 solid;
+  border-radius: 0.5rem;
+  background-color: #f8f8f8;
   padding: 1rem;
 }
-
-.details-action ul li:last-child{
+.details-action ul li:last-child {
   display: flex;
   flex-direction: column;
 }
-
-.button{
+.button {
   padding: 1rem;
-  border: .1rem silver solid;
+  border: 0.1rem #808080 solid;
   border-radius: 0.5rem;
   cursor: pointer;
 }
-
-.button:hover{
-  border: .1rem plum solid;
+.button:hover {
+  border: 0.1rem #404040 solid;
 }
+.button.primary {
+  background-color: #f0c040;
+}
+.button.secondary {
+  background-color: #f0f0f0;
+}
+.text-center {
+  text-align: center;
+}
+/* Cart */
 
-/* cart */
-
-.cart{
+.cart {
   display: flex;
   flex-wrap: wrap;
   margin: 1rem;
   align-items: flex-start;
+  padding: 6rem;
 }
-
-.cart-list{
+.cart-list {
   flex: 3 1 60rem;
-
 }
-
-.cart-action{
-  flex: 1 1 20rem;
-  background-color: plum;
-  color: black;
-  border: .1rem black solid;
-  border-radius: .5rem;
+.cart-action {
+  flex: 1 1 22rem;
+  background-color: #f0f0f0;
+  border-radius: 0.5rem;
   padding: 1rem;
+  margin: 12px;
+  font-size: 2.5rem;
+  margin-top: 50px;
 }
-
-.cart-list-container{
+.cart-list-container {
   padding: 0;
   list-style-type: none;
-  padding: 1rem;
 }
+.cart-list-container li {
+  display: flex;
+  justify-content: space-between;
 
-.cart-list-container li{
-  padding: 0;
-  list-style-type: none;
-  padding: 1rem;
-  margin: 1rem;
-  border-bottom: .1rem plum solid;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 0.1rem #c0c0c0 solid;
 }
-
-.cart-list-container img{
-  max-width: 10rem;
-  max-height: 10rem;
+.cart-list-container li img {
+  max-width: 11rem;
+  max-height: 11rem;
 }
-
-.cart-list-container li:first-child{
+.cart-list-container li:first-child {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
 }
-
-.cart-image{
+.cart-image {
   flex: 1 1;
 }
-
-.cart-name{
+.cart-name {
   flex: 8 1;
+  font-size: 2rem;
+}
+.cart-price {
+  flex: 1 1;
+  font-size: 2.1rem;
+  text-align: right;
+}
+.total-price{
+  font-size: 3rem;  
+  text-align: right;
+  margin: .5rem;
+}
+.delete-button{
+  margin-left: 1rem;
+  padding: .5rem;
 }
 
-.cart-price{
-  flex: 1 1;
-  font-size: 2.5rem;
-  text-align: right;
+/*image cover */
+.image-cover {
+  /* The image used */
+  background-image: url(screens/styles/cover.jpg);
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
