--- a/rossie-handmade-frontend/src/index.css
+++ b/rossie-handmade-frontend/src/index.css
@@ -292,7 +292,7 @@ a > .rating > span:last-child {
 .cart-price {
   flex: 1 1;
   font-size: 2.1rem;
-  text-align: right;
+  text-align: center;
 }
 .total-price{
   font-size: 3rem;  
@@ -302,6 +302,7 @@ a > .rating > span:last-child {
 .delete-button{
   margin-left: 1rem;
   padding: .5rem;
+  text-align: center;
 }
 
 /*image cover */
@@ -316,4 +317,39 @@ a > .rating > span:last-child {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.text-center{
+  text-align: center;
+}
+
+/* FORM */
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 10rem;
+  font-size: 2rem;
+}
+.form-container {
+  display: flex;
+  flex-direction: column;
+  width: 32rem;
+  padding: 2rem;
+  border: 0.1rem plum solid;
+  border-radius: 0.5rem;
+  list-style-type: none;
+}
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+input {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
+  border-radius: 0.5rem;
 }
