--- a/rossie-handmade-frontend/src/index.css
+++ b/rossie-handmade-frontend/src/index.css
@@ -330,7 +330,7 @@ a > .rating > span:last-child {
   justify-content: center;
   align-items: center;
   height: 100%;
-  padding: 1rem;
+  padding: 6rem;
   font-size: 2rem;
 }
 .form-container {
@@ -379,4 +379,36 @@ th {
 }
 tbody > tr:nth-child(odd) {
   background-color: #f0f0f0;
+}
+
+/* filter */
+
+.filter {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 1rem auto;
+  max-width: 45rem;
+  justify-content: space-between;
+  align-items: center;
+}
+.filter input,
+.filter button,
+.filter select {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #c0c0c0 solid;
+  font-size: 1.6rem;
+}
+.categories {
+  padding: 0;
+  list-style-type: none;
+}
+.categories a {
+  display: flex;
+  padding: 1rem;
+}
+
+.categories a:hover {
+  background-color: #c0c0c0;
 }
